tests/neg-custom-args/fatal-warnings/i2673c.scala
package Foos

object Outer {
  class X // error
  object x
}
